--- a/moment-nvr/moment-nvr/Makefile.am
+++ b/moment-nvr/moment-nvr/Makefile.am
@@ -35,19 +35,33 @@ moment_nvr_target_headers =
 moment_nvrdir = $(libdir)/moment-1.0
 moment_nvr_LTLIBRARIES = libmoment-nvr-1.0.la
 libmoment_nvr_1_0_la_SOURCES =	\
+        types.h                 \
         types.cpp               \
+        naming_scheme.h         \
         naming_scheme.cpp       \
+        nvr_file_iterator.h     \
         nvr_file_iterator.cpp   \
-        av_nvr_recorder.cpp		\
-        flv_file_muxer.cpp		\
+        av_nvr_recorder.cpp	\
+        av_nvr_recorder.h       \
+        flv_file_muxer.h	\
+        flv_file_muxer.cpp	\
+        nvr_cleaner.h           \
         nvr_cleaner.cpp         \
         channel_recorder.cpp    \
+        channel_recorder.h      \
+        channel_checker.h       \
         channel_checker.cpp     \
+        media_recorder.h        \
         media_recorder.cpp      \
+        media_reader.h          \
         media_reader.cpp        \
+        media_viewer.h          \
         media_viewer.cpp        \
+        get_file_session.h      \
         get_file_session.cpp    \
+        moment_nvr_module.h     \
         moment_nvr_module.cpp   \
+        inc.h                   \
         mod_nvr.cpp
 
 moment_nvr_extra_dist =
