* added http-request for removing recorded video by interval in unixtime * implemented making mp4 part of video by http-request with start and end time parameters * implemented http-request for statistics * added statictics grabbing system (RAM, packet passing time), also fixes for timers * added files for easy start of server * expanded log system, added callstack log for segmentation fault * optimized performance of timing request by using one index file for source

--- a/moment-ffmpeg/moment-ffmpeg/Makefile.am
+++ b/moment-ffmpeg/moment-ffmpeg/Makefile.am
@@ -49,6 +49,12 @@ libmoment_ffmpeg_1_0_la_SOURCES =	\
         get_file_session.h              \
         types.h                         \
         types.cpp                       \
+        time_checker.cpp                \
+        time_checker.h                  \
+        stat_measurer.cpp               \
+        stat_measurer.h                 \
+        video_part_maker.cpp            \
+        video_part_maker.h              \
         inc.h
 
 moment_ffmpeg_extra_dist =
