* fixed bad numbers in statistics; removed building onvif from build system * fixed crash when trying to write bad audiostream in file: write only video * fixed hung when modifying source; fixed syntax error in json response * big fix for crash when disk overflow occurs; also supported streaming audio from recorded file * added http-request for removing recorded video by interval in unixtime

--- a/moment.conf
+++ b/moment.conf
@@ -49,7 +49,7 @@ mod_nvr {
 
 mod_file {
   {
-    prefix = "moment"
+    prefix = "nvrserver"
     path = "/opt/nvr/share/moment/myplayer"
     vars {
       enable MyPlayerPlaylist = "/server/playlist.json"
