--- a/moment-ffmpeg/moment-ffmpeg/Makefile.am
+++ b/moment-ffmpeg/moment-ffmpeg/Makefile.am
@@ -55,6 +55,8 @@ libmoment_ffmpeg_1_0_la_SOURCES =	\
         stat_measurer.h                 \
         video_part_maker.cpp            \
         video_part_maker.h              \
+        memory_dispatcher.cpp           \
+        memory_dispatcher.h             \
         inc.h
 
 moment_ffmpeg_extra_dist =
