* fixes: disable_record is not keeped when source is changed; * multidisk feature's wrong behaviour * added extended statictics for sources * some bugs with stream detection were fixed: crash when uri is not rtsp

--- a/moment.conf
+++ b/moment.conf
@@ -44,11 +44,11 @@ mod_hls {
 
 mod_nvr {
   enable = y
-  record_dir = "/opt/nvr/records"
-  recording_state_dir = "/opt/nvr/recordingState"
+  recpath_conf = "/opt/nvr/recpath.conf"
   file_duration = 60
   // 31 день == 44640 минут
   max_age = 44640
+  download_limit = 3600 // in sec
 }
 
 mod_file {
