added instructions to activate the validation of encrypted sources path supported encrypted source path for rtmp only for default style in web) second admin port removed - use only one port now

--- a/moment.conf
+++ b/moment.conf
@@ -1,5 +1,6 @@
 // Put your server's IP address or hostname here
 #define HOST 127.0.0.1
+#define WEBHOST HOST/index.php/cams/check
 
 #define RTMP  1935
 #define RTMPT 8081
@@ -21,7 +22,6 @@ moment {
 
 http {
   http_bind  = :HTTP
-  admin_bind = :ADMIN
 }
 
 mod_rtmp {
@@ -32,6 +32,8 @@ mod_rtmp {
   // Set to 0 for real-time communication applications.
   // Higher values reduce CPU usage.
   send_delay = 100
+  enable_validation = n
+  validation_server_addr = WEBHOST
 }
 
 mod_gst {
