added http request for source's living state and resolution * added statistics about HDD utilization

--- a/moment-ffmpeg/moment-ffmpeg/Makefile.am
+++ b/moment-ffmpeg/moment-ffmpeg/Makefile.am
@@ -58,6 +58,7 @@ libmoment_ffmpeg_1_0_la_SOURCES =	\
         rec_path_config.cpp             \
         rec_path_config.h               \
         ffmpeg_common.h                 \
+        iostat.h                        \
         inc.h
 
 moment_ffmpeg_win_sources =                                         \
