default moment.conf: file_duration=60, enable_validation=y

--- a/moment.conf
+++ b/moment.conf
@@ -32,7 +32,7 @@ mod_rtmp {
   // Set to 0 for real-time communication applications.
   // Higher values reduce CPU usage.
   send_delay = 100
-  enable_validation = n
+  enable_validation = y
   validation_server_addr = WEBHOST
 }
 
@@ -47,7 +47,7 @@ mod_hls {
 mod_nvr {
   enable = y
   recpath_conf = "/opt/nvr/recpath.conf"
-  file_duration = 600
+  file_duration = 60
   // 31 день == 44640 минут
   max_age = 44640
   download_limit = 3600 // in sec
